# AI_PROJECTS

./: Simple Chatbot.ipynb
CHATGPT-API/: Simple Chatbot.ipynb  WithGobal link.ipynb  chef.ipynb  customizable chatbot.ipynb  simple_poc.ipynb
CHATGPT-API/builiding_system with llm models/: Build an End-to-End System.ipynb  End to End system_gemini.ipynb  Evaluate Inputs-Classification.ipynb  Language Models, the Chat Format and Tokens.ipynb  Moderation.ipynb  Process Inputs Chain of Thought Reasoning.ipynb  Process Inputs Chaining Prompts.ipynb  check_outputs.ipynb
MCP/: 1_async.ipynb
MCP/postgres/: database.db  main.py  postgres_mcp_v3.py  pyproject.toml
Machine Learning-Regression/: SVR-Grid.ipynb
RAG/: RAG_POC.ipynb
